package net.civeira.phylax.features.access.clientidentity.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.clientidentity.domain.event.ClientIdentityCreateEvent;
import net.civeira.phylax.features.access.clientidentity.domain.event.ClientIdentityDeleteEvent;
import net.civeira.phylax.features.access.clientidentity.domain.event.ClientIdentityEvent;
import net.civeira.phylax.features.access.clientidentity.domain.event.ClientIdentityUpdateEvent;
import net.civeira.phylax.features.access.clientidentity.domain.valueobject.RelyingPartyVO;
import net.civeira.phylax.features.access.clientidentity.domain.valueobject.RolesVO;
import net.civeira.phylax.features.access.clientidentity.domain.valueobject.TrustedClientVO;
import net.civeira.phylax.features.access.clientidentity.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.clientidentity.domain.valueobject.UserVO;
import net.civeira.phylax.features.access.clientidentity.domain.valueobject.VersionVO;

/**
 * client-identity
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class ClientIdentity implements ClientIdentityRef {

  /**
   * Prepare a new client identity with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new client identity
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed client identity.
   */
  public static ClientIdentity create(final ClientIdentityChangeSet change)
      throws ConstraintException {
    ClientIdentity instance = new ClientIdentity(change, Optional.empty());
    instance.addEvent(ClientIdentityCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<ClientIdentityEvent> recordedEvents = List.of();

  /**
   * El relying party de client identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private RelyingPartyVO relyingPartyValue = RelyingPartyVO.nullValue();

  /**
   * El roles de client identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private RolesVO rolesValue = RolesVO.nullValue();

  /**
   * El trusted client de client identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TrustedClientVO trustedClientValue = TrustedClientVO.nullValue();

  /**
   * El identificador de la aplicacion
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El user de client identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UserVO userValue;

  /**
   * Campo con el número de version de client identity para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private ClientIdentity(final ClientIdentityChangeSet attribute,
      final Optional<ClientIdentity> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.userValue = attribute.readUser(previous, list);
    this.relyingPartyValue = attribute.readRelyingParty(previous, list);
    this.trustedClientValue = attribute.readTrustedClient(previous, list);
    this.rolesValue = attribute.readRoles(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on ClientIdentity", list);
    }
    this.recordedEvents = previous.map(ClientIdentity::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a client identity
   *
   * @autogenerated EntityGenerator
   * @return A instance of client identity ready to be deleted
   */
  public ClientIdentity delete() {
    ClientIdentity instance = new ClientIdentity(new ClientIdentityChangeSet(), Optional.of(this));
    instance.addEvent(ClientIdentityDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(6);
    uidToMap(map);
    userToMap(map);
    relyingPartyToMap(map);
    trustedClientToMap(map);
    rolesToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a client identity
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of client identity
   */
  public ClientIdentity update(final ClientIdentityChangeSet change) throws ConstraintException {
    ClientIdentity instance = new ClientIdentity(change, Optional.of(this));
    instance.addEvent(ClientIdentityUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public ClientIdentity withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final ClientIdentityEvent event) {
    List<ClientIdentityEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
